--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -18,6 +18,7 @@
        title: <input name="title" type="text" /> <br />
        description: <input name="description" type="text" /> <br />
        location: <input name="location" type="text" /> <br />
+       Event Location: <input name="evnLocation" type="text" /> <br />
        <br />
         <input type="submit" name="submit" value="submit" />
     </form>
